# dsurf

./: .gitignore  CMakeLists.txt  README.md  run.sh  test-single.sh  test.sh
config/: services.rb
features/: copypaste.feature  delete.feature  hello.feature  new.feature  undo.feature  undodict.feature  undolist.feature  zmq.feature
features/step_definitions/: send.rb  steps.rb
features/support/: hooks.rb
flo/include/: function.hpp  functions.hpp  processor.hpp  state.hpp  transform.hpp
flo/include/functions/: apply.hpp  cur.hpp  dict.hpp  equal.hpp  getmember.hpp  if.hpp  null.hpp  pass.hpp  select.hpp  setmember.hpp  string.hpp  true.hpp
flo/src/: functions.cpp  processor.cpp  state.cpp  transform.cpp
flo/src/functions/: apply.cpp  cur.cpp  dict.cpp  equal.cpp  getmember.cpp  if.cpp  null.cpp  pass.cpp  select.cpp  setmember.cpp  string.cpp  true.cpp
flo/test/: applytest.cpp  helloworldtest.cpp  libtest.cpp  simpletest.cpp
include/: bool.hpp  boolprop.hpp  box.hpp  builder.hpp  change.hpp  changes.hpp  colours.hpp  commandable.hpp  core.hpp  corner.hpp  dict.hpp  dictprop.hpp  editable.hpp  element.hpp  err.hpp  filenames.hpp  filledbox.hpp  flo.hpp  font.hpp  generic.hpp  gfx.hpp  handlers.hpp  hud.hpp  hudable.hpp  hudflags.hpp  hudmode.hpp  indexable.hpp  keyable.hpp  layout.hpp  list.hpp  listable.hpp  listelem.hpp  listprop.hpp  locatable.hpp  long.hpp  longprop.hpp  macutil.hpp  module.hpp  modules.hpp  move.hpp  (+29 more)
modules/code/: main.cpp  main.hpp  root.cpp  root.hpp  scenario.cpp  scenario.hpp
modules/code/test/: dummyobjs.cpp  streams.json
modules/project/: code.cpp  code.hpp  fileobj.cpp  fileobj.hpp  main.cpp  main.hpp  obj.cpp  obj.hpp  root.cpp  root.hpp  unkobj.cpp  unkobj.hpp  zmqobj.cpp  zmqobj.hpp
modules/project/test/: project.json  testproject.cpp
src/: bool.cpp  box.cpp  builder.cpp  changes.cpp  colours.cpp  commandable.cpp  core.cpp  corner.cpp  dead.cpp  dict.cpp  dictprop.cpp  dsurf.cpp  editable.cpp  element.cpp  err.cpp  filenames.cpp  filledbox.cpp  flo.cpp  font.cpp  generic.cpp  genkeys.cpp  gfx.cpp  hud.cpp  hudable.cpp  hudmode.cpp  indexable.cpp  keyable.cpp  layout.cpp  list.cpp  listable.cpp  listelem.cpp  listprop.cpp  locatable.cpp  long.cpp  longprop.cpp  macutil.cpp  modules.cpp  move.cpp  newelement.cpp  node.cpp  (+29 more)
test/: applywrong.json  code.json  complex.json  complex.yaml  dict.json  dictofemptydicts.json  dictprop.json  dummybuilder.cpp  dummyobjs.cpp  dummytext.cpp  emptydictprop.json  emptystr.json  hello-t.json  list.json  listbool.json  listlong.json  listoflists.json  listprop.json  obj-t.json  project.json  send.cpp  simple.json  simplelist.json  simpleprops.json  string-t.json  testbuilder.cpp  testchanges.cpp  testerrable.cpp  testfilenames.cpp  testflo.cpp  testkeys.cpp  testlist.cpp  testmem.cpp  testmove.cpp  testspatial.cpp
